// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Separator_Large story 1`] = `
<View
  style={
    [
      {
        "alignSelf": "flex-end",
        "backgroundColor": "#D1D1D6",
        "height": 1,
      },
    ]
  }
  width={395}
/>
`;

exports[`renders Separator_Medium story 1`] = `
<View
  style={
    [
      {
        "alignSelf": "flex-end",
        "backgroundColor": "#D1D1D6",
        "height": 1,
      },
    ]
  }
  width={359}
/>
`;

exports[`renders Separator_Small story 1`] = `
<View
  style={
    [
      {
        "alignSelf": "flex-end",
        "backgroundColor": "#D1D1D6",
        "height": 1,
      },
    ]
  }
  width={319}
/>
`;
